# KikooRenderer

./: .gitignore  .gitmodules  BuildMSBuild.bat  CMakeLists.txt  CMakeSettings.json  DebugMSBuild.bat  PackageMSBuild.bat  README.md
resources/Models/bunny/: KikooRenderer - Shortcut.lnk  untitled.fbx
src/: CmakeLists.txt  KikooRenderer.cpp  MainWindow.cpp  MainWindow.hpp
src/3DEngine/: BaseObjects.cpp  BaseObjects.hpp  CameraScene.cpp  CameraScene.hpp  Component.cpp  Component.hpp  CubeFramebuffer.cpp  CubeFramebuffer.hpp  Cubemap.cpp  Cubemap.hpp  DrawImmediate.cpp  DrawImmediate.hpp  Framebuffer.cpp  Framebuffer.hpp  MeshFilterComponent.cpp  MeshFilterComponent.hpp  Object3D.cpp  Object3D.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  StandardShaders.cpp  StandardShaders.hpp  Texture.cpp  Texture.hpp  TransformComponent.cpp  TransformComponent.hpp  TransformWidget.cpp  TransformWidget.hpp  Util.cpp  Util.hpp
src/3DEngine/CameraControllers/: CameraController.cpp  CameraController.hpp
src/3DEngine/Clouds/: Cloud_1.cpp  Cloud_1.hpp  layeredWorley.txt  perlinWorley.txt
src/3DEngine/Components/: BaseMeshes.cpp  BaseMeshes.hpp  BoundingComponent.cpp  BoundingComponent.hpp  Component.cpp  Component.hpp  Components.h  FluidComponent.cpp  FluidComponent.hpp  LightComponent.cpp  LightComponent.hpp  MaterialComponent.cpp  MaterialComponent.hpp  MeshFilterComponent.cpp  MeshFilterComponent.hpp  TerrainComponent.cpp  TerrainComponent.hpp  TransformComponent.cpp  TransformComponent.hpp  lightViewBOc.java  shadowRender.java
src/3DEngine/Curves/: CatmutRollSpline.cpp  CatmutRollSpline.hpp  Curves.h  NURBS.cpp  NURBS.hpp  NonUniformBSpline.cpp  NonUniformBSpline.hpp
src/3DEngine/Misc/LensFlare/: LensFlare.cpp  LensFlare.hpp  LensFlareShader.cpp  LensFlareShader.hpp
src/3DEngine/ParticleSystem/: Particle.cpp  Particle.hpp  ParticleShader.cpp  ParticleShader.hpp  ParticleSystem.cpp  ParticleSystem.hpp  ParticleTexture.cpp  ParticleTexture.hpp
src/3DEngine/PostProcessing/: BloomPostProcess.cpp  BloomPostProcess.hpp  DepthOfFieldPostProcess.cpp  DepthOfFieldPostProcess.hpp  FXAAPostProcess.cpp  FXAAPostProcess.hpp  MotionBlurPostProcess.cpp  MotionBlurPostProcess.hpp  PostProcess.cpp  PostProcess.hpp  PostProcessing.h  PostProcessor.cpp  PostProcessor.hpp
src/3DEngine/Renderers/: Deferred.cpp  Deferred.hpp  HDRRenderer.cpp  HDRRenderer.hpp  Renderer.cpp  Renderer.hpp  Renderers.hpp
src/3DEngine/Shaders/: AxisHelperShader.cpp  AxisHelperShader.hpp  BlinnPhongShader.cpp  BlinnPhongShader.hpp  GouraudShader.cpp  GouraudShader.hpp  PBRShader.cpp  PBRShader.hpp  SelectedShader.cpp  SelectedShader.hpp  ShaderParams.cpp  ShaderParams.hpp  UnlitShader.cpp  UnlitShader.hpp
src/3DEngine/SpatialPartitioning/: Octree.cpp  Octree.hpp
src/3DEngine/Text/TexturedText/: Character.hpp  Line.hpp  MetaFile.hpp  TexturedText.cpp  TexturedText.hpp  Word.hpp
src/3DEngine/Texture/: Texture3D.cpp  Texture3D.hpp
src/3DEngine/WaterTiles/: WaterTileShader_1.cpp  WaterTileShader_1.hpp  WaterTile_1.cpp  WaterTile_1.hpp
src/AppManagement/: 3DUIPreferences.cpp  3DUIPreferences.hpp  BackgroundPreferences.cpp  BackgroundPreferences.hpp  PhysicsPreferences.cpp  PhysicsPreferences.hpp  PostProcessingPreferences.cpp  PostProcessingPreferences.hpp  PreferencesWindow.cpp  PreferencesWindow.hpp  RenderingPreferences.cpp  RenderingPreferences.hpp
src/Common/: Common.h
src/Console/: ConsoleDock.cpp  ConsoleDock.hpp
src/FileIO/: SceneToFile.cpp  SceneToFile.hpp
src/Geometry/: Box.cpp  Box.hpp  Planes.hpp  Ray.cpp  Ray.hpp  Util.cpp  Util.h
src/ObjectDetails/: ObjectDetails.cpp  ObjectDetails.hpp  ObjectParams.cpp  ObjectParams.hpp
src/PhysicsEngines/: Physics.hpp
src/PhysicsEngines/Bullet/: Simulation.cpp  Simulation.hpp
src/Renderer/: BRDF.cpp  BRDF.hpp  Camera.cpp  Camera.hpp  Common.hpp  Material.cpp  Material.hpp  MciroFacets.hpp  MicroFacets.cpp  MicroFacets.hpp  RayTracer.cpp  RayTracer.hpp  Shapes.cpp  Shapes.hpp
src/Renderer/BRDF/: BRDF.cpp  BRDF.hpp  TorranceSparrow.cpp  TorranceSparrow.hpp
src/Renderer/Materials/: Lambertian.cpp  Lambertian.hpp  Material.cpp  Material.hpp  Metallic.cpp  Metallic.hpp
src/Renderer/PDF/: MixturePdf.hpp  ShapePdf.cpp  ShapePdf.hpp  cosinePdf.cpp  cosinePdf.hpp  pdf.cpp  pdf.hpp
src/Renderer/Shapes/: Aggregate.cpp  Aggregate.hpp  Box.cpp  Box.hpp  Shape.cpp  Shape.hpp  Sphere.cpp  Sphere.hpp  TriangleMesh.cpp  TriangleMesh.hpp
src/Renderer/SpatialAcceleration/: BVH.cpp  BVH.hpp  Bounds.cpp  Bounds.hpp
src/Renderer/Textures/: Cubemap.cpp  Cubemap.hpp
src/Renderer/Util/: Geometry.cpp  Geometry.hpp
src/SceneTree/: SceneTree.cpp  SceneTree.hpp  SceneTreeView.cpp  SceneTreeView.hpp  TreeItem.cpp  TreeItem.hpp
src/Util/: Common.h  Image.cpp  Image.hpp  ModelLoader.cpp  ModelLoader.hpp  NoiseUtil.cpp  NoiseUtil.hpp  QtUtil.cpp  QtUtil.hpp  RandomUtil.cpp  RandomUtil.hpp  Sample.cpp  Sample.hpp  ThreadingUtil.cpp  ThreadingUtil.hpp
src/View3D/: View3D.cpp  View3D.hpp  View3DGL.cpp  View3DGL.hpp
tmp/fontMeshCreator/: GUIText.java
tmp/fontRendering/: fontFragment.txt
(+26 files in other folders)
